--- a/templates/update_add.html
+++ b/templates/update_add.html
@@ -22,7 +22,7 @@
 
         {{form}}
 
-        <button type="submit" name="update_add" class="btn btn-success mt-3 w-500px">Saqlash</button>
+        <button type="submit"  class="btn btn-success mt-3 w-500px">Saqlash</button>
     </form>        
   </section>
 {% endblock %}
