--- a/templates/about.html
+++ b/templates/about.html
@@ -42,7 +42,7 @@
           <div class="col-md-6 col-lg-3 justify-content-center counter-wrap ftco-animate">
             <div class="block-18 py-5 mb-4">
               <div class="text text-border d-flex align-items-center">
-                <strong class="number" data-number="{{about.population}}">0</strong>
+                <strong class="number" data-number="{{user.count}}">0</strong>
                 <span>Area <br>Population</span>
               </div>
             </div>
@@ -50,7 +50,7 @@
           <div class="col-md-6 col-lg-3 justify-content-center counter-wrap ftco-animate">
             <div class="block-18 py-5 mb-4">
               <div class="text text-border d-flex align-items-center">
-                <strong class="number" data-number="{{about.properties}}">0</strong>
+                <strong class="number" data-number="{{announcement.count}}">0</strong>
                 <span>Total <br>Properties</span>
               </div>
             </div>
@@ -58,7 +58,7 @@
           <div class="col-md-6 col-lg-3 justify-content-center counter-wrap ftco-animate">
             <div class="block-18 py-5 mb-4">
               <div class="text text-border d-flex align-items-center">
-                <strong class="number" data-number="{{about.average_house}}">0</strong>
+                <strong class="number" data-number="{{type}}">0</strong>
                 <span>Average <br>House</span>
               </div>
             </div>
