--- a/templates/agent_properties.html
+++ b/templates/agent_properties.html
@@ -30,8 +30,12 @@
 				
 					<div class="property-wrap ftco-animate">
 					
+						{% if request.user.is_authenticated %}
 						{% if announcement.image %}
 							<a href="{% url 'properties-single' announcement.id %}" class="img" style="background-image: url('{{ announcement.image.url }}');">
+						{% endif %}
+						{% else %}
+							<a href="{% url 'sign_in'%}" class="img" style="background-image: url('{{ announcement.image.url }}');">
 						{% endif %}
 						<div class="rent-sale">
 						{% if announcement.status.id == 1 %}
@@ -55,7 +59,7 @@
 							</a>
 							<div class="list-team d-flex align-items-center mt-2 pt-2 bannouncement-top">
 								<div class="d-flex align-items-center">
-									<div class="img" style="background-image: url('{% static 'images/person_1.jpg' %}');"></div>
+									<div class="img" style="background-image: url('{{ announcement.person_name.userdetail.author_image.url }}');"></div>
 									<h3 class="ml-2">{{ announcement.person_name }}</h3>
 								</div>
 								<span class="text-right">{{ announcement.date }}</span>
@@ -67,7 +71,7 @@
 				</div>
 			{% endfor %}
 		{% else %}
-		<h5>E'lonlar mavjud emas</h5>
+		<h5 style="margin-left:40px;">Bu agentimizning e'lonlari hali mavjud emas !</h5>
 		{% endif%}
         </div>
 		{% if announcements.has_other_pages %}
@@ -81,7 +85,7 @@
 				{% for i in announcements.paginator.page_range %}
 				{% if announcements.number == i %}
 				<li class="active"><span>{{ i }}</span></li>
-				{% else %}
+				{% elif i > announcements.number|add:'-2' and i < announcements.number|add:'2' %}
                 <li><a href="?page={{ i }}">{{ i }}</a></li>
 				{% endif %}
 				{% endfor %}
