--- a/templates/blog-single.html
+++ b/templates/blog-single.html
@@ -19,28 +19,27 @@
       <div class="container">
         <div class="row">
           <div class="col-md-8 ftco-animate">
+          <h2 class="mb-3">{{ blogs.title }}</h2>
           	<p>
-              <img src="{% static 'blog.image.url' %}" alt="" class="img-fluid">
+              <img src="{{ blogs.blog_single_image1.url }}" alt="blog_image" class="img-fluid">
             </p>
-            <h2 class="mb-3">It is a long established fact a reader be distracted</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis, eius mollitia suscipit, quisquam doloremque distinctio perferendis et doloribus unde architecto optio laboriosam porro adipisci sapiente officiis nemo accusamus ad praesentium? Esse minima nisi et. Dolore perferendis, enim praesentium omnis, iste doloremque quia officia optio deserunt molestiae voluptates soluta architecto tempora.</p>
-            <p>Molestiae cupiditate inventore animi, maxime sapiente optio, illo est nemo veritatis repellat sunt doloribus nesciunt! Minima laborum magni reiciendis qui voluptate quisquam voluptatem soluta illo eum ullam incidunt rem assumenda eveniet eaque sequi deleniti tenetur dolore amet fugit perspiciatis ipsa, odit. Nesciunt dolor minima esse vero ut ea, repudiandae suscipit!</p>
-            <h2 class="mb-3 mt-5">#2. Creative WordPress Themes</h2>
-            <p>Temporibus ad error suscipit exercitationem hic molestiae totam obcaecati rerum, eius aut, in. Exercitationem atque quidem tempora maiores ex architecto voluptatum aut officia doloremque. Error dolore voluptas, omnis molestias odio dignissimos culpa ex earum nisi consequatur quos odit quasi repellat qui officiis reiciendis incidunt hic non? Debitis commodi aut, adipisci.</p>
+            
+            <p>{{blogs.content_header}}</p>
             <p>
-              <img src="{% static 'images/image_8.jpg' %}" alt="" class="img-fluid">
+              <img src="{{blogs.blog_single_image2.url}}" alt="" class="img-fluid">
             </p>
-            <p>Quisquam esse aliquam fuga distinctio, quidem delectus veritatis reiciendis. Nihil explicabo quod, est eos ipsum. Unde aut non tenetur tempore, nisi culpa voluptate maiores officiis quis vel ab consectetur suscipit veritatis nulla quos quia aspernatur perferendis, libero sint. Error, velit, porro. Deserunt minus, quibusdam iste enim veniam, modi rem maiores.</p>
-            <p>Odit voluptatibus, eveniet vel nihil cum ullam dolores laborum, quo velit commodi rerum eum quidem pariatur! Quia fuga iste tenetur, ipsa vel nisi in dolorum consequatur, veritatis porro explicabo soluta commodi libero voluptatem similique id quidem? Blanditiis voluptates aperiam non magni. Reprehenderit nobis odit inventore, quia laboriosam harum excepturi ea.</p>
-            <p>Adipisci vero culpa, eius nobis soluta. Dolore, maxime ullam ipsam quidem, dolor distinctio similique asperiores voluptas enim, exercitationem ratione aut adipisci modi quod quibusdam iusto, voluptates beatae iure nemo itaque laborum. Consequuntur et pariatur totam fuga eligendi vero dolorum provident. Voluptatibus, veritatis. Beatae numquam nam ab voluptatibus culpa, tenetur recusandae!</p>
-            <p>Voluptas dolores dignissimos dolorum temporibus, autem aliquam ducimus at officia adipisci quasi nemo a perspiciatis provident magni laboriosam repudiandae iure iusto commodi debitis est blanditiis alias laborum sint dolore. Dolores, iure, reprehenderit. Error provident, pariatur cupiditate soluta doloremque aut ratione. Harum voluptates mollitia illo minus praesentium, rerum ipsa debitis, inventore?</p>
+            <p>{{blogs.content_body}}</p>
             <div class="tag-widget post-tag-container mb-5 mt-5">
+            
               <div class="tagcloud">
-                <a href="#" class="tag-cloud-link">house</a>
-                <a href="#" class="tag-cloud-link">home</a>
+              {% for type in types %}
+                <a href="{% url 'type-detail' type.id %}" class="tag-cloud-link">{{type.name}}</a>
+                {% comment %} <a href="#" class="tag-cloud-link">home</a>
                 <a href="#" class="tag-cloud-link">building</a>
-                <a href="#" class="tag-cloud-link">Travel</a>
+                <a href="#" class="tag-cloud-link">Travel</a> {% endcomment %}
+              {% endfor %}
               </div>
+            
             </div>
             
             <div class="about-author d-flex p-4 bg-light">
@@ -179,28 +178,32 @@
             <div class="sidebar-box ftco-animate">
               <div class="categories">
                 <h3>Categories</h3>
-                <li><a href="#">Residences <span>(12)</span></a></li>
-                <li><a href="#">Office <span>(22)</span></a></li>
+                {% for categorie in categories %}
+                <li><a href="{% url 'categories-detail' categorie.id %}">{{categorie.name}} <span>{{categorie.blog_set.all.count}}</span></a></li>
+                {% comment %} <li><a href="#">Office <span>(22)</span></a></li>
                 <li><a href="#">Commercial <span>(37)</span></a></li>
                 <li><a href="#">Building <span>(42)</span></a></li>
-                <li><a href="#">Storage <span>(14)</span></a></li>
+                <li><a href="#">Storage <span>(14)</span></a></li> {% endcomment %}
+                {% endfor %}
               </div>
             </div>
-
-            <div class="sidebar-box ftco-animate">
-              <h3>Recent Blog</h3>
+            <h3>Recent Blog</h3>
+            {% for blog in blog_post %}
+            <div class="sidebar-box ftco-animate mb-0">
+              
               <div class="block-21 mb-4 d-flex">
-                <a class="blog-img mr-4" style="background-image: url(images/image_1.jpg);"></a>
+                <a class="blog-img mr-4" style="background-image: url({{blog.blog_image.url}});"></a>
                 <div class="text">
-                  <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about the blind texts</a></h3>
+                  <h3 class="heading"><a href="{% url 'blog-single' blog.id %}">{{blog.title}}</a></h3>
                   <div class="meta">
-                    <div><a href="#"><span class="icon-calendar"></span> June 01, 2020</a></div>
-                    <div><a href="#"><span class="icon-person"></span> Admin</a></div>
+                    <div><a href="{% url 'blog-single' blog.id %}"><span class="icon-calendar"></span>{{blog.date}}</a></div>
+                    <div><a href="#"><span class="icon-person"></span>{{blog.agent}}</a></div>
                     <div><a href="#"><span class="icon-chat"></span> 19</a></div>
                   </div>
                 </div>
               </div>
-              <div class="block-21 mb-4 d-flex">
+            
+              {% comment %} <div class="block-21 mb-4 d-flex">
                 <a class="blog-img mr-4" style="background-image: url({% static 'images/image_2.jpg' %});"></a>
                 <div class="text">
                   <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about the blind texts</a></h3>
@@ -221,9 +224,10 @@
                     <div><a href="#"><span class="icon-chat"></span> 19</a></div>
                   </div>
                 </div>
-              </div>
+              </div> {% endcomment %}
             </div>
-
+            {% endfor %}
+           
             <div class="sidebar-box ftco-animate">
               <h3>Tag Cloud</h3>
               <div class="tagcloud">
@@ -240,10 +244,11 @@
 
             <div class="sidebar-box ftco-animate">
               <h3>Paragraph</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus itaque, autem necessitatibus voluptate quod mollitia delectus aut, sunt placeat nam vero culpa sapiente consectetur similique, inventore eos fugit cupiditate numquam!</p>
+              <p>{{blogs.paragraph}}</p>
             </div>
           </div>
 
+              
         </div>
       </div>
     </section> <!-- .section -->
