--- a/templates/properties.html
+++ b/templates/properties.html
@@ -117,9 +117,12 @@
         	<div class="col-md-4">
 			
         		<div class="property-wrap ftco-animate">
-				
+					{% if request.user.is_authenticated %}
 					{% if announcement.image %}
 						<a href="{% url 'properties-single' announcement.id %}" class="img" style="background-image: url('{{ announcement.image.url }}');">
+					{% endif %}
+					{% else %}
+						<a href="{% url 'sign_in'%}" class="img" style="background-image: url('{{ announcement.image.url }}');">
 					{% endif %}
 					<div class="rent-sale">
 					{% if announcement.status.id == 1 %}
@@ -319,7 +322,7 @@
 				{% for i in announcements.paginator.page_range %}
 					{% if announcements.number == i %}
 						<li class="active"><span>{{ i }}</span></li>
-					{% elif num > announcement.number|add:'-3' and num < announcement.number|add:'3' %}
+					{% elif i > announcements.number|add:'-2' and i < announcements.number|add:'2' %}
 						<li><a href="?page={{ i }}">{{ i }}</a></li>
 					{% endif %}
 				{% endfor %}
