--- a/templates/region_properties.html
+++ b/templates/region_properties.html
@@ -24,14 +24,18 @@
 					</div>
 				</div>
         <div class="row">
-		{% if region.announcement_set.all %}
-		{% for announcement in region.announcement_set.all %}
+		{% if announcements %}
+		{% for announcement in announcements %}
         	<div class="col-md-4">
 			
         		<div class="property-wrap ftco-animate">
 				
+					{% if request.user.is_authenticated %}
 					{% if announcement.image %}
 						<a href="{% url 'properties-single' announcement.id %}" class="img" style="background-image: url('{{ announcement.image.url }}');">
+					{% endif %}
+					{% else %}
+						<a href="{% url 'sign_in'%}" class="img" style="background-image: url('{{ announcement.image.url }}');">
 					{% endif %}
 					<div class="rent-sale">
 					{% if announcement.status.id == 1 %}
@@ -55,7 +59,7 @@
         				</a>
         				<div class="list-team d-flex align-items-center mt-2 pt-2 bannouncement-top">
         					<div class="d-flex align-items-center">
-	        					<div class="img" style="background-image: url('{% static 'images/person_1.jpg' %}');"></div>
+	        					<div class="img" style="background-image: url('{{ announcement.person_name.userdetail.author_image.url }}');"></div>
 	        					<h3 class="ml-2">{{ announcement.person_name }}</h3>
 	        				</div>
 	        				<span class="text-right">{{ announcement.date }}</span>
